--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev:all": "start npm run dev && start npm run dev:backend",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "netlify-build": "next build"
   },
   "dependencies": {
     "next": "15.2.4",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.10.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
