--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm run netlify-build"
   publish = ".next"
 
 [[plugins]]
@@ -7,4 +7,12 @@
 
 [build.environment]
   NEXT_PUBLIC_API_URL = "http://127.0.0.1:5000"  # Update this with your backend API URL when deployed
-  NEXTAUTH_URL = "https://rentgo-koraput.netlify.app"  # Update this with your actual Netlify URL once deployed 
+  NEXTAUTH_URL = "https://rentgo-koraput.netlify.app"  # Update this with your actual Netlify URL once deployed
+  NETLIFY_USE_YARN = "false"
+  NODE_VERSION = "18"
+  NEXT_TELEMETRY_DISABLED = "1"
+
+[dev]
+  command = "npm run dev"
+  port = 3000
+  publish = ".next" 
