--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:all": "start npm run dev && start npm run dev:backend",
     "build": "next build",
+    "netlify-build": "CI=false DISABLE_ESLINT_PLUGIN=true next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
-    "netlify-build": "next build"
+    "export": "next export"
   },
   "dependencies": {
     "next": "15.2.4",
