--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,17 @@
 [build]
-  command = "npm run netlify-build"
+  command = "npm run build"
   publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
-  NEXT_PUBLIC_API_URL = "http://127.0.0.1:5000"  # Update this with your backend API URL when deployed
+  NEXT_PUBLIC_API_URL = "https://your-backend-api-url.com"  # Update this with your backend API URL when deployed
   NEXTAUTH_URL = "https://rentgo-koraput.netlify.app"  # Update this with your actual Netlify URL once deployed
   NETLIFY_USE_YARN = "false"
   NODE_VERSION = "18"
   NEXT_TELEMETRY_DISABLED = "1"
+  NEXT_FORCE_SWC = "true"
 
 [dev]
   command = "npm run dev"
