--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "dev": "next dev",
     "dev:backend": "cd backend && npm run dev",
     "dev:all": "start npm run dev && start npm run dev:backend",
-    "build": "next build",
-    "netlify-build": "CI=false DISABLE_ESLINT_PLUGIN=true next build",
+    "build": "DISABLE_ESLINT_PLUGIN=true next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.2.4",
