--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:all": "start npm run dev && start npm run dev:backend",
     "prebuild": "node remove-babel-config.js",
-    "build": "DISABLE_ESLINT_PLUGIN=true next build",
+    "build": "next build",
+    "export": "next export",
+    "build:export": "next build && next export",
+    "build:windows": "build-windows.bat",
+    "build:clean": "node build-admin.js",
     "netlify-build": "node remove-babel-config.js && next build",
     "start": "next start",
     "lint": "next lint",
